[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/MainScene.gd" type="Script" id=1]
[ext_resource path="res://resources/Value.tscn" type="PackedScene" id=2]
[ext_resource path="res://Poppins-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://PoppinsMedium.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.2, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.270588, 1, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.101961, 0.2, 1, 1 )

[node name="MainScene" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.145098, 0.145098, 0.145098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sudoku" type="Node" parent="."]

[node name="Row0" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 39 )

[node name="Col0" parent="Sudoku/Row0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row0" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row1" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 97 )

[node name="Col0" parent="Sudoku/Row1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row1" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row2" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 155 )

[node name="Col0" parent="Sudoku/Row2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row2" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row3" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 213 )

[node name="Col0" parent="Sudoku/Row3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row3" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row4" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 271 )

[node name="Col0" parent="Sudoku/Row4" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row4" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row5" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 329 )

[node name="Col0" parent="Sudoku/Row5" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row5" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row6" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 387 )

[node name="Col0" parent="Sudoku/Row6" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row6" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row7" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 445 )

[node name="Col0" parent="Sudoku/Row7" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row7" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="Row8" type="Node2D" parent="Sudoku"]
position = Vector2( 50, 503 )

[node name="Col0" parent="Sudoku/Row8" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 58.0

[node name="Col1" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Col2" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 58.0

[node name="Col3" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 174.0
margin_right = 232.0
margin_bottom = 58.0

[node name="Col4" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 232.0
margin_right = 290.0
margin_bottom = 58.0

[node name="Col5" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 58.0

[node name="Col6" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 348.0
margin_right = 406.0
margin_bottom = 58.0

[node name="Col7" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 406.0
margin_right = 464.0
margin_bottom = 58.0

[node name="Col8" parent="Sudoku/Row8" instance=ExtResource( 2 )]
margin_left = 464.0
margin_right = 522.0
margin_bottom = 58.0

[node name="UI" type="Control" parent="."]
anchor_left = 0.610352
anchor_top = 0.065
anchor_right = 0.943359
anchor_bottom = 0.938333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewPuzzle" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/NewPuzzle"]
anchor_right = 1.0
anchor_bottom = 0.388889
margin_bottom = -21.0
custom_fonts/font = ExtResource( 4 )
text = "Generate new puzzle?"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Difficulty" type="OptionButton" parent="UI/NewPuzzle"]
anchor_top = 0.544444
anchor_right = 0.395894
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Generate" type="Button" parent="UI/NewPuzzle"]
anchor_left = 0.624633
anchor_top = 0.544444
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Generate"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="UI/NewPuzzle"]
anchor_top = 1.06667
anchor_right = 0.208211
anchor_bottom = 1.32222
margin_top = -7.62939e-06
margin_right = -14.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 4 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Check" type="Control" parent="UI"]
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Check"]
anchor_right = 1.0
anchor_bottom = 0.811111
margin_bottom = -59.0
custom_fonts/font = ExtResource( 4 )
text = "Check the answers?"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Submit" type="Button" parent="UI/Check"]
anchor_left = 0.312317
anchor_top = 0.544444
anchor_right = 0.687683
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Solve" type="Control" parent="UI"]
anchor_right = 1.0
margin_top = 300.0
margin_bottom = 390.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Solve"]
anchor_right = 1.0
anchor_bottom = 0.388889
margin_bottom = -21.0
custom_fonts/font = ExtResource( 4 )
text = "Already gave up?"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SolvingSpeed" type="OptionButton" parent="UI/Solve"]
anchor_top = 0.544444
anchor_right = 0.395894
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Solve" type="Button" parent="UI/Solve"]
anchor_left = 0.624633
anchor_top = 0.544444
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Solve"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="UI/Solve"]
anchor_top = 1.06667
anchor_right = 0.337243
anchor_bottom = 1.32222
margin_top = -7.62939e-06
margin_right = -58.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 4 )
text = "Solving Speed"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Message" type="Control" parent="UI"]
anchor_right = 1.0
margin_top = 470.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Message"]
anchor_right = 1.0
anchor_bottom = 0.388889
margin_bottom = -21.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DesignBorder" type="Node" parent="."]

[node name="Horizontal" type="Node" parent="DesignBorder"]

[node name="Border" type="ColorRect" parent="DesignBorder/Horizontal"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0488281
anchor_top = 0.065
anchor_right = 0.558594
anchor_bottom = 0.0733333
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Border2" type="ColorRect" parent="DesignBorder/Horizontal"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0488281
anchor_top = 0.355
anchor_right = 0.558594
anchor_bottom = 0.363333
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Border3" type="ColorRect" parent="DesignBorder/Horizontal"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0488281
anchor_top = 0.645
anchor_right = 0.558594
anchor_bottom = 0.653333
margin_bottom = -1.99997
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Border4" type="ColorRect" parent="DesignBorder/Horizontal"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0488281
anchor_top = 0.935
anchor_right = 0.558594
anchor_bottom = 0.943333
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Vertical" type="Node" parent="DesignBorder"]

[node name="Border" type="ColorRect" parent="DesignBorder/Vertical"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0488281
anchor_top = 0.065
anchor_right = 0.0537109
anchor_bottom = 0.935
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Border2" type="ColorRect" parent="DesignBorder/Vertical"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.21875
anchor_top = 0.065
anchor_right = 0.223633
anchor_bottom = 0.935
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Border3" type="ColorRect" parent="DesignBorder/Vertical"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.388672
anchor_top = 0.065
anchor_right = 0.393555
anchor_bottom = 0.935
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Border4" type="ColorRect" parent="DesignBorder/Vertical"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.558594
anchor_top = 0.065
anchor_right = 0.563477
anchor_bottom = 0.935
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="item_selected" from="UI/NewPuzzle/Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="pressed" from="UI/NewPuzzle/Generate" to="." method="_on_Generate_pressed"]
[connection signal="pressed" from="UI/Check/Submit" to="." method="_on_Submit_pressed"]
[connection signal="item_selected" from="UI/Solve/SolvingSpeed" to="." method="_on_SolvingSpeed_item_selected"]
[connection signal="pressed" from="UI/Solve/Solve" to="." method="_on_Solve_pressed"]
